# messenger-rs

./: Cargo.toml  LICENSE  README.md
.github/: sane_labels.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
examples/falus-bot/: Cargo.toml  Makefile.toml
falus-bot/: Cargo.toml
mfw/: Cargo.toml
